--- a/StackByArray.vcxproj.filters
+++ b/StackByArray.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="StackByArray.c">
+    <ClCompile Include="StackByArray2_5701580.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
